fixed: changes color

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Bekmirzayev <span>Dev</span> </a>
+        <a href="#" class="nav__logo">Bekmirzayev<span>Dev</span> </a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
@@ -68,10 +68,10 @@
               <h1 class="home__title">Bekmirzayev Elmurod</h1>
               <h3 class="home__education">Front-end Developer</h3>
               <p class="home__description">
-                With knowledge in web developer and design , I offer the best
-                projects resulting in quality work
+                With knowledge in web developer and mobile developer, I offer
+                the best projects resulting in quality work
               </p>
-              <a href="#contact" class="button">Let`s Talk</a>
+              <a href="#contact" class="button">Download cv</a>
             </div>
             <div class="home__social">
               <a href="" target="_blank" class="home__social-link">
@@ -447,9 +447,7 @@
             <i class="ri-twitter-line"></i>
           </a>
         </div>
-        <span class="footer__copy"
-          >&#169; Copyright Bedincome . All rights reserved</span
-        >
+        <span class="footer__copy">&#169; Copyright . All rights reserved</span>
       </div>
     </footer>
 
