feat : add comfyhouse

--- a/index.html
+++ b/index.html
@@ -71,16 +71,28 @@
                 With knowledge in web developer and mobile developer, I offer
                 the best projects resulting in quality work
               </p>
-              <a href="#contact" class="button">Download cv</a>
+              <a href="/assets/cv.pdf" class="button">Download cv</a>
             </div>
             <div class="home__social">
-              <a href="" target="_blank" class="home__social-link">
+              <a
+                href="https://github.com/mathstutor19"
+                target="_blank"
+                class="home__social-link"
+              >
                 <i class="ri-github-fill"></i>
               </a>
-              <a href="" target="_blank" class="home__social-link">
-                <i class="ri-dribbble-line"></i>
+              <a
+                href="https://t.me/bekmirzayevdev"
+                target="_blank"
+                class="home__social-link"
+              >
+                <i class="ri-telegram-fill"></i>
               </a>
-              <a href="" target="_blank" class="home__social-link">
+              <a
+                href="https://www.linkedin.com/in/bekmirzayev/"
+                target="_blank"
+                class="home__social-link"
+              >
                 <i class="ri-linkedin-box-line"></i>
               </a>
             </div>
@@ -251,15 +263,17 @@
           <div class="skills__content">
             <ol class="skills__group">
               <li class="skills__item">HTML & CSS</li>
+              <li class="skills__item">Bootstrap & Sass</li>
               <li class="skills__item">JavaScript</li>
-              <li class="skills__item">Bootstrap</li>
-              <li class="skills__item">React</li>
+              <li class="skills__item">React & Redux</li>
+              <li class="skills__item">Vue & Vuex</li>
             </ol>
-            <ol class="skills__group" start="5">
-              <li class="skills__item">Git & GitHub</li>
-              <li class="skills__item">Figma</li>
-              <li class="skills__item">Bootstrap</li>
-              <li class="skills__item">React</li>
+            <ol class="skills__group" start="6">
+              <li class="skills__item">React Native</li>
+              <li class="skills__item">Node & Express</li>
+              <li class="skills__item">MongoDB</li>
+              <li class="skills__item">Git & Github</li>
+              <li class="skills__item">JavaScript OOP</li>
             </ol>
           </div>
         </div>
@@ -278,19 +292,19 @@
             </p>
           </article>
           <article class="services__card">
-            <i class="ri-pantone-line services__icon"></i>
-            <h2 class="services__title">UI/UX Designer</h2>
+            <i class="ri-smartphone-line services__icon"></i>
+            <h2 class="services__title">Mobile Developer</h2>
             <p class="services__description">
-              I offer design of web interface and mobile applications, design
-              made in figma, adobe xd and sketch
+              I am also known as Android or iOS developers if they work on one
+              platform, but it's common for developers to work on both.
             </p>
           </article>
           <article class="services__card">
-            <i class="ri-pen-nib-line services__icon"></i>
-            <h2 class="services__title">Graphic Design</h2>
+            <i class="ri-parentheses-line services__icon"></i>
+            <h2 class="services__title">Maths Tutor</h2>
             <p class="services__description">
-              I make designs at the client`s request, banner design ,
-              poster,digital design among others.
+              I have been working as maths tutor and physics tutor for 5 years.
+              I can solve maths`s problems easier
             </p>
           </article>
         </div>
@@ -301,94 +315,50 @@
         <h3 class="section__subtitle">My <span>Jobs</span></h3>
         <h2 class="section__title">Recent Projects</h2>
         <div class="projects__container container grid">
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-1.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
+              <a href="https://comfyhouse.vercel.app" target="_blank">
+                <img
+                  src="assets/img/project-img-1.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
+
+                <div class="projects__modal">
+                  <span class="projects__subtitle"
+                    >ComfyHouse in JavaScript</span
+                  >
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">
+                    Html , Css , JavaScript, API
+                  </p>
+                </div>
               </a>
             </div>
+            <h2 class="projects__about">ComfyHouse in JavaScript</h2>
           </article>
 
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-2.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
-              </a>
-            </div>
-          </article>
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
+              <a href="https://comfyhouse.vercel.app" target="_blank">
+                <img
+                  src="assets/img/project-img-1.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
 
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-3.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
+                <div class="projects__modal">
+                  <span class="projects__subtitle"
+                    >ComfyHouse in JavaScript</span
+                  >
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">
+                    Html , Css , JavaScript, API
+                  </p>
+                </div>
               </a>
             </div>
-          </article>
-
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-4.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
-              </a>
-            </div>
-          </article>
-
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-5.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
-              </a>
-            </div>
-          </article>
-
-          <article class="projects__card">
-            <img
-              src="assets/img/project-img-6.jpg"
-              alt="projects"
-              class="projects__img"
-            />
-            <div class="projects__modal">
-              <span class="project__subtitle">Web</span>
-              <h2 class="projects__title">Modern website</h2>
-              <a href="#" class="projects__button"
-                >View demo <i class="ri-external-link-line"></i>
-              </a>
-            </div>
+            <h2 class="projects__about">ComfyHouse in JavaScript</h2>
           </article>
         </div>
       </section>
@@ -433,18 +403,30 @@
     <footer class="footer">
       <div class="footer__container container grid">
         <div>
-          <h1 class="footer__title">Bekmirzayev <span>Dev</span></h1>
+          <h1 class="footer__title">Bekmirzayev<span>Dev</span></h1>
           <h2 class="footer__education">Front-End Developer</h2>
         </div>
         <div class="footer__social">
-          <a href="#" target="_blank" class="footer__social-link">
-            <i class="ri-facebook-circle-line"></i>
+          <a
+            href="https://github.com/mathstutor19"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="ri-github-fill"></i>
           </a>
-          <a href="#" target="_blank" class="footer__social-link">
-            <i class="ri-instagram-line"></i>
+          <a
+            href="https://t.me/bekmirzayevdev"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="ri-telegram-fill"></i>
           </a>
-          <a href="#" target="_blank" class="footer__social-link">
-            <i class="ri-twitter-line"></i>
+          <a
+            href="https://www.linkedin.com/in/bekmirzayev/"
+            target="_blank"
+            class="footer__social-link"
+          >
+            <i class="ri-linkedin-box-line"></i>
           </a>
         </div>
         <span class="footer__copy">&#169; Copyright . All rights reserved</span>
