feat: add musicplay

--- a/index.html
+++ b/index.html
@@ -317,25 +317,42 @@
         <div class="projects__container container grid">
           <article class="projects__card__wrapper">
             <div class="projects__card">
-              <a href="https://comfyhouse.vercel.app" target="_blank">
+              <a href="https://musicvue.vercel.app/" target="_blank">
                 <img
-                  src="assets/img/project-img-1.jpg"
+                  src="assets/img/musicplay.jpg"
                   alt="projects"
                   class="projects__img"
                 />
 
                 <div class="projects__modal">
-                  <span class="projects__subtitle"
-                    >ComfyHouse in JavaScript</span
-                  >
+                  <span class="projects__subtitle">MusicPlay in Vue</span>
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">Html , Css ,CRUD, Vue</p>
+                </div>
+              </a>
+            </div>
+            <h2 class="projects__about">MusicPlay in Vue</h2>
+          </article>
+
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
+              <a href="https://snakegame-gamma.vercel.app/" target="_blank">
+                <img
+                  src="assets/img/snakegame.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
+
+                <div class="projects__modal">
+                  <span class="projects__subtitle">SnakeGame in JS OOP</span>
                   <h2 class="projects__title">Used Technology</h2>
                   <p class="projects__technology">
-                    Html , Css , JavaScript, API
+                    Html , Css ,Canvas, JavaScript, OOP
                   </p>
                 </div>
               </a>
             </div>
-            <h2 class="projects__about">ComfyHouse in JavaScript</h2>
+            <h2 class="projects__about">SnakeGame in JS OOP</h2>
           </article>
 
           <article class="projects__card__wrapper">
