fead: add typing

--- a/index.html
+++ b/index.html
@@ -357,6 +357,25 @@
 
           <article class="projects__card__wrapper">
             <div class="projects__card">
+              <a href="https://typingtest-eta.vercel.app/" target="_blank">
+                <img
+                  src="assets/img/typingtest.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
+
+                <div class="projects__modal">
+                  <span class="projects__subtitle">Typing in JavaScript</span>
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">Html , Css , JavaScript</p>
+                </div>
+              </a>
+            </div>
+            <h2 class="projects__about">Typing in JavaScript</h2>
+          </article>
+
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
               <a href="https://comfyhouse.vercel.app" target="_blank">
                 <img
                   src="assets/img/project-img-1.jpg"
