feat : add realtor

--- a/index.html
+++ b/index.html
@@ -317,6 +317,27 @@
         <div class="projects__container container grid">
           <article class="projects__card__wrapper">
             <div class="projects__card">
+              <a href="https://realtor-react-bay.vercel.app/" target="_blank">
+                <img
+                  src="assets/img/realtor.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
+
+                <div class="projects__modal">
+                  <span class="projects__subtitle">Realtor in React.js</span>
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">
+                    Html , Css ,React.js, React-router, Firebase, Moment,
+                  </p>
+                </div>
+              </a>
+            </div>
+            <h2 class="projects__about">Realtor in React.js</h2>
+          </article>
+
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
               <a href="https://musicvue.vercel.app/" target="_blank">
                 <img
                   src="assets/img/musicplay.jpg"
