feat: add moviesprojectjs

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
               <h1 class="home__title">Bekmirzayev Elmurod</h1>
               <h3 class="home__education">Front-end Developer</h3>
               <p class="home__description">
-                With knowledge in web developer and mobile developer, I offer
-                the best projects resulting in quality work
+                With knowledge in Front-end Developer and Back-end Developer, I
+                offer the best projects resulting in quality work
               </p>
               <a href="/assets/cv.pdf" class="button">Download cv</a>
             </div>
@@ -265,11 +265,11 @@
               <li class="skills__item">HTML & CSS</li>
               <li class="skills__item">Bootstrap & Sass</li>
               <li class="skills__item">JavaScript</li>
-              <li class="skills__item">React & Redux</li>
-              <li class="skills__item">Vue & Vuex</li>
+              <li class="skills__item">React & React-router</li>
+              <li class="skills__item">Redux & Redux-toolkit</li>
             </ol>
             <ol class="skills__group" start="6">
-              <li class="skills__item">React Native</li>
+              <li class="skills__item">Tailwind CSS</li>
               <li class="skills__item">Node & Express</li>
               <li class="skills__item">MongoDB</li>
               <li class="skills__item">Git & Github</li>
@@ -285,7 +285,7 @@
         <div class="services__container container grid">
           <article class="services__card">
             <i class="ri-layout-3-line services__icon"></i>
-            <h2 class="services__title">Web Developer</h2>
+            <h2 class="services__title">Front-end Developer</h2>
             <p class="services__description">
               Development of custom web pages.Using current technologies and
               libraries of the labor field
@@ -293,10 +293,10 @@
           </article>
           <article class="services__card">
             <i class="ri-smartphone-line services__icon"></i>
-            <h2 class="services__title">Mobile Developer</h2>
+            <h2 class="services__title">Back-end Developer</h2>
             <p class="services__description">
-              I am also known as Android or iOS developers if they work on one
-              platform, but it's common for developers to work on both.
+              I am also known build and maintain the mechanisms that process
+              data and perform actions on websites.
             </p>
           </article>
           <article class="services__card">
@@ -315,44 +315,30 @@
         <h3 class="section__subtitle">My <span>Jobs</span></h3>
         <h2 class="section__title">Recent Projects</h2>
         <div class="projects__container container grid">
+
+
           <article class="projects__card__wrapper">
             <div class="projects__card">
-              <a href="https://realtor-react-bay.vercel.app/" target="_blank">
+              <a
+                href="https://moviesproject-javascript.vercel.app/"
+                target="_blank"
+              >
                 <img
-                  src="assets/img/realtor.jpg"
+                  src="assets/img/movieporjectjs.jpg"
                   alt="projects"
                   class="projects__img"
                 />
 
                 <div class="projects__modal">
-                  <span class="projects__subtitle">Realtor in React.js</span>
+                  <span class="projects__subtitle">Movies in Javascript</span>
                   <h2 class="projects__title">Used Technology</h2>
                   <p class="projects__technology">
-                    Html , Css ,React.js, React-router, Firebase, Moment,
+                    Html , Css ,API, Javascript
                   </p>
                 </div>
               </a>
             </div>
-            <h2 class="projects__about">Realtor in React.js</h2>
-          </article>
-
-          <article class="projects__card__wrapper">
-            <div class="projects__card">
-              <a href="https://musicvue.vercel.app/" target="_blank">
-                <img
-                  src="assets/img/musicplay.jpg"
-                  alt="projects"
-                  class="projects__img"
-                />
-
-                <div class="projects__modal">
-                  <span class="projects__subtitle">MusicPlay in Vue</span>
-                  <h2 class="projects__title">Used Technology</h2>
-                  <p class="projects__technology">Html , Css ,CRUD, Vue</p>
-                </div>
-              </a>
-            </div>
-            <h2 class="projects__about">MusicPlay in Vue</h2>
+            <h2 class="projects__about">Movies in Javascript</h2>
           </article>
 
           <article class="projects__card__wrapper">
