add fullstact real estate project

--- a/index.html
+++ b/index.html
@@ -315,7 +315,29 @@
         <h3 class="section__subtitle">My <span>Jobs</span></h3>
         <h2 class="section__title">Recent Projects</h2>
         <div class="projects__container container grid">
+          <article class="projects__card__wrapper">
+            <div class="projects__card">
+              <a
+                href="https://full-stack-real-estate-iqf7.vercel.app/"
+                target="_blank"
+              >
+                <img
+                  src="assets/img/full-stack-real-estate.jpg"
+                  alt="projects"
+                  class="projects__img"
+                />
 
+                <div class="projects__modal">
+                  <span class="projects__subtitle">Real-estate in MERN</span>
+                  <h2 class="projects__title">Used Technology</h2>
+                  <p class="projects__technology">
+                    Html , Css ,API, React.js, Node.js, Express,MongoDB
+                  </p>
+                </div>
+              </a>
+            </div>
+            <h2 class="projects__about">Real-estate in MERN</h2>
+          </article>
 
           <article class="projects__card__wrapper">
             <div class="projects__card">
