add mixmaster project

--- a/index.html
+++ b/index.html
@@ -317,26 +317,23 @@
         <div class="projects__container container grid">
           <article class="projects__card__wrapper">
             <div class="projects__card">
-              <a
-                href="https://full-stack-real-estate-iqf7.vercel.app/"
-                target="_blank"
-              >
+              <a href="https://mixmaster-tau.vercel.app/" target="_blank">
                 <img
-                  src="assets/img/full-stack-real-estate.jpg"
+                  src="assets/img/mixmaster.jpg"
                   alt="projects"
                   class="projects__img"
                 />
 
                 <div class="projects__modal">
-                  <span class="projects__subtitle">Real-estate in MERN</span>
+                  <span class="projects__subtitle">MixMater in React</span>
                   <h2 class="projects__title">Used Technology</h2>
                   <p class="projects__technology">
-                    Html , Css ,API, React.js, Node.js, Express,MongoDB
+                    Html , Css , API, React, Redux, React Query
                   </p>
                 </div>
               </a>
             </div>
-            <h2 class="projects__about">Real-estate in MERN</h2>
+            <h2 class="projects__about">MixMater in React</h2>
           </article>
 
           <article class="projects__card__wrapper">
