--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <header class="contianer">
+    <header class="container">
       <nav
         class="flex items-center justify-between hidden md:flex pt-[57px] pb-[30px]"
       >
         <a href="#">
           <img src="./images/LOGO.svg" alt="logo" />
         </a>
-        <ul class="flex items-center justify-between gap-15 text-[#959595]">
+        <ul
+          class="flex items-center justify-between gap-15 text-[#959595] font-[Lato] font-medium text-[20px] leading-[100%] tracking-[3%] text-justify"
+        >
           <li>
-            <a class="hover:text-orange-500" href="#">Home</a>
+            <a class="hover:text-orange-500 text-orange-500" href="#">Home</a>
           </li>
           <li>
             <a class="hover:text-orange-500" href="#">Services</a>
@@ -42,15 +44,23 @@
     </header>
 
     <!-- HERO -->
-    <section class="contianer flex items-center justify-between">
+    <section class="container flex items-center justify-between">
       <!-- LEFT -->
       <div>
-        <p class="font-semibold text-2xl text-[#707070]">Hi I am</p>
-        <h2 class="text-3xl font-semibold text-[#959595] mt-2.5">
+        <p
+          class="font-semibold text-2xl text-[#707070] font-[Lato] text-[24px] leading-[100%] tracking-[3%]"
+        >
+          Hi I am
+        </p>
+        <h2
+          class="text-3xl font-semibold text-[#959595] mt-2.5 font-[Lato] font-bold text-[28px] leading-[100%] tracking-[3%]"
+        >
           Mahmood Fazile
         </h2>
 
-        <h1 class="text-[70px] mt-6 mb-4 font-bold text-orange-500 mt-4">
+        <h1
+          class="mt-6 mb-4 font-bold text-orange-500 mt-4 font-[Lato] font-black text-[70px] leading-[100%] tracking-[3%]"
+        >
           UI/UX designer
         </h1>
 
@@ -65,14 +75,14 @@
         <!-- BUTTONS -->
         <div class="flex gap-4 mt-8">
           <button
-            class="bg-orange-500 text-white px-10 py-3 rounded-lg font-semibold hover:bg-orange-400"
+            class="bg-orange-500 text-white px-10 py-3 rounded-lg font-semibold hover:bg-orange-400 font-[Lato] font-bold text-[20px] leading-[100%] tracking-[3%] text-justify"
           >
             Hire Me
           </button>
 
           <a
             href="#"
-            class="border border-gray-500 px-6 py-3 rounded-lg hover:border-orange-500"
+            class="border border-gray-500 px-6 py-3 rounded-lg hover:border-orange-500 font-[Lato] font-bold text-[20px] leading-[100%] tracking-[3%] text-justify text-[#959595]"
           >
             Download CV
           </a>
@@ -83,20 +93,38 @@
           class="flex gap-12 mt-12 bg-[rgba(255,255,255,0.05)] p-6 rounded-xl w-fit"
         >
           <div class="pt-1 pr-8 pb-1 border-r">
-            <h3 class="text-orange-500 text-2xl font-bold">5+</h3>
-            <p class="text-[#dfdfdf] font-bold text-xl text-justify">
+            <h3
+              class="text-orange-500 font-bold font-[Lato] font-extrabold text-[24px] leading-[100%] tracking-[3%] text-justify"
+            >
+              5+
+            </h3>
+            <p
+              class="text-[#dfdfdf] font-bold text-justify font-[Lato] font-bold text-[20px] leading-[100%] tracking-[3%]"
+            >
               Experiences
             </p>
           </div>
           <div class="pt-1 pr-8 pb-1 border-r">
-            <h3 class="text-orange-500 text-2xl font-bold">20+</h3>
-            <p class="text-[#dfdfdf] font-bold text-xl text-justify">
+            <h3
+              class="text-orange-500 font-bold font-[Lato] font-extrabold text-[24px] leading-[100%] tracking-[3%] text-justify"
+            >
+              20+
+            </h3>
+            <p
+              class="text-[#dfdfdf] font-bold text-justify font-[Lato] font-bold text-[20px] leading-[100%] tracking-[3%]"
+            >
               Project done
             </p>
           </div>
           <div class="pt-1 pr-8 pb-1">
-            <h3 class="text-orange-500 text-2xl font-bold">80+</h3>
-            <p class="text-[#dfdfdf] font-bold text-xl text-justify">
+            <h3
+              class="text-orange-500 font-bold font-[Lato] font-extrabold text-[24px] leading-[100%] tracking-[3%] text-justify"
+            >
+              80+
+            </h3>
+            <p
+              class="text-[#dfdfdf] font-bold text-justify font-[Lato] font-bold text-[20px] leading-[100%] tracking-[3%]"
+            >
               Happy Clients
             </p>
           </div>
@@ -106,20 +134,26 @@
       <!-- RIGHT IMAGE -->
       <div class="relative flex justify-center">
         <div
-          class="absolute w-[420px] h-[420px] bg-[#1c1c1c] rounded-full"
+          class="absolute bg-[#1c1c1c] rounded-full w-[618px] h-[618px] top-[163px] right-[0px]"
         ></div>
 
         <img
           src="./images/Man.png"
           alt="Profile"
-          class="relative z-10 w-[360px] object-cover"
+          class="relative left-[-45px] z-10 object-cover w-[520px] h-[781px] rounded-[244px]"
         />
       </div>
     </section>
     <!-- ================= SERVICES ================= -->
-    <section class="contianer text-center">
-      <h2 class="text-[40px] font-bold mt-[150px] mb-[18px]">Services</h2>
-      <p class="text-[#707070]">
+    <section class="container text-center">
+      <h2
+        class="text-[40px] font-bold mt-[150px] mb-[18px] font-[Lato] leading-[100%] tracking-[3%]"
+      >
+        Services
+      </h2>
+      <p
+        class="text-[#707070] font-[Lato] font-medium text-[20px] leading-[160%] tracking-[3%]"
+      >
         Lorem ipsum dolor sit amet consectetur. Imperdiet convallis blandit
         felis ligula aliquam
       </p>
@@ -175,29 +209,38 @@
     </section>
 
     <!-- ================= ABOUT ME ================= -->
-    <section class="py-24">
+    <section class="container">
       <div class="max-w-7xl mx-auto px-8">
         <!-- Title -->
         <div class="text-center mb-16">
-          <h2 class="text-[40px] font-bold mt-[150px] mb-[18px]">About Me</h2>
-          <p class="text-[#707070]">
-            User Interface and User Experience and Also video editing
+          <h2
+            class="text-[40px] font-bold mt-[150px] mb-[18px] font-[Lato] leading-[100%] tracking-[3%]"
+          >
+            Services
+          </h2>
+          <p
+            class="text-[#707070] font-[Lato] font-medium text-[20px] leading-[160%] tracking-[3%]"
+          >
+            Lorem ipsum dolor sit amet consectetur. Imperdiet convallis blandit
+            felis ligula aliquam
           </p>
         </div>
 
         <!-- Content -->
-        <div class="grid md:grid-cols-2 gap-20 items-center">
+        <div class="flex gap-20 items-center justify-space-between">
           <!-- LEFT IMAGE -->
-          <div class="relative flex justify-center">
+          <div
+            class="flex justify-center relative w-[523px] h-[676px] bg-[#1c1c1c] rounded-tl-[261px] rounded-tr-[261px] rounded-br-[12px] rounded-bl-[12px]"
+          >
             <!-- Dark circle -->
-            <div
+            <!-- <div
               class="absolute w-[523px] h-[676px] bg-[#1c1c1c] rounded-tl-[261px] rounded-tr-[261px] rounded-br-[12px] rounded-bl-[12px]"
-            ></div>
+            ></div> -->
 
             <img
               src="images/Man.png"
               alt="About profile"
-              class="relative z-10 w-[360px] grayscale"
+              class="z-10 w-[566px] h-[808px] bottom-[0px] absolute grayscale"
             />
           </div>
 
@@ -236,21 +279,139 @@
     </section>
 
     <!-- ================= PORTFOLIO ================= -->
-    <section class="py-20 text-center">
-      <h2 class="text-3xl font-bold mb-8">Portfolio</h2>
-
-      <div class="max-w-6xl mx-auto grid md:grid-cols-3 gap-6 px-6">
-        <div class="bg-[#141414] rounded-xl p-4">
-          <img src="https://picsum.photos/300/200" class="rounded-lg mb-2" />
-          <p class="text-sm text-gray-400">Name Project</p>
+    <section id="portfolio" class="px-12 py-20 text-center">
+      <h2 class="text-4xl font-bold mb-12">Portfolio</h2>
+      <div class="flex justify-center gap-4 mb-12">
+        <button class="bg-orange-500 px-6 py-2 rounded">All</button>
+        <button
+          class="bg-[rgba(255,_255,_255,_0.08)] px-6 py-2 rounded hover:bg-gray-700"
+        >
+          JavaScript
+        </button>
+        <button
+          class="bg-[rgba(255,_255,_255,_0.08)] px-6 py-2 rounded hover:bg-gray-700"
+        >
+          React.js
+        </button>
+        <button
+          class="bg-[rgba(255,_255,_255,_0.08)] px-6 py-2 rounded hover:bg-gray-700"
+        >
+          Next.js
+        </button>
+        <button
+          class="bg-[rgba(255,_255,_255,_0.08)] px-6 py-2 rounded hover:bg-gray-700"
+        >
+          Node.js
+        </button>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
         </div>
-        <div class="bg-[#141414] rounded-xl p-4">
-          <img src="https://picsum.photos/300/200" class="rounded-lg mb-2" />
-          <p class="text-sm text-gray-400">Name Project</p>
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
         </div>
-        <div class="bg-[#141414] rounded-xl p-4">
-          <img src="https://picsum.photos/300/200" class="rounded-lg mb-2" />
-          <p class="text-sm text-gray-400">Name Project</p>
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
+        </div>
+        <div>
+          <img
+            src="https://picsum.photos/450/300"
+            class="rounded-lg hover:scale-105 transition"
+          />
+          <div class="flex justify-between mt-4 px-2">
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Name Project
+            </p>
+            <p
+              class="font-[Lato] font-bold text-[16px] leading-[160%] tracking-[3%] text-justify capitalize text-[rgba(198,_198,_198,_1)]"
+            >
+              Categories
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -268,16 +429,24 @@
           placeholder="Project details"
         ></textarea>
         <button
-          class="border border-gray-500 px-6 py-3 rounded md:col-span-2 w-fit mx-auto"
+          class="border px-6 py-3 rounded md:col-span-2 w-fit mx-auto bg-orange-500"
         >
           Send
         </button>
       </form>
     </section>
+
     <!-- ================= FOOTER ================= -->
-    <footer class="py-10 text-center text-gray-400 border-t border-gray-800">
-      <div class="text-orange-500 font-bold mb-4">LOGO</div>
-      <p>© 2026 UI/UX Designer</p>
+    <footer class="bg-black py-12 text-center border-t border-gray-900">
+      <div class="text-orange-500 font-bold text-2xl mb-6 text-center">
+        <img class="mx-auto" src="./images/LOGO.svg" alt="logo" />
+      </div>
+      <div class="flex justify-center gap-6 mb-8 text-gray-400">
+        <a href="#">Home</a><a href="#">Services</a><a href="#">About</a>
+      </div>
+      <p class="text-gray-600 text-sm">
+        © 2024 UI/UX Designer. All Rights Reserved.
+      </p>
     </footer>
   </body>
 </html>
